--- a/front/package.json
+++ b/front/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
     "material-ui": "^0.20.0",
     "particlesjs": "^2.2.3",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-axios": "^2.0.3",
     "react-dom": "^16.2.0",
     "react-particles-js": "^2.4.2",
-    "react-scripts": "^2.1.3"
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.1.3",
+    "react-toastify": "^4.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
