--- a/front/package.json
+++ b/front/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
+    "jquery": "^3.3.1",
     "material-ui": "^0.20.0",
     "particlesjs": "^2.2.3",
     "prop-types": "^15.6.0",
