--- a/front/package.json
+++ b/front/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
     "jquery": "^3.3.1",
@@ -16,8 +17,18 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
-    "react-toastify": "^4.5.2"
+    "react-speech": "^0.3.2",
+    "react-toastify": "^4.5.2",
+    "react-voice-components": "^1.0.0"
   },
+  "plugins": [
+    [
+      "@babel/plugin-proposal-class-properties",
+      {
+        "loose": true
+      }
+    ]
+  ],
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -29,5 +40,14 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "express-pino-logger": "^4.0.0",
+    "node-env-run": "^3.0.2",
+    "nodemon": "^1.18.9",
+    "npm-run-all": "^4.1.5",
+    "pino-colada": "^1.4.4"
+  }
 }
