--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,7 @@
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
+    "dotenv": "^6.2.0",
     "jquery": "^3.3.1",
     "material-ui": "^0.20.0",
     "particlesjs": "^2.2.3",
