implementing profile for users and multiselect box

--- a/back/environments/local.env
+++ b/back/environments/local.env
@@ -8,7 +8,7 @@ SMTP_USER=''
 SMTP_PASSWORD=''
 
 # Flask database configuration
-SQLALCHEMY_DATABASE_URI='postgresql://global:123abc@localhost:5432/ai_teacher_test'
+SQLALCHEMY_DATABASE_URI='postgresql://global:123abc@localhost:5432/ai_teacher'
 SQLALCHEMY_TRACK_MODIFICATIONS=False
 
 # JWT configuration base
