--- a/front/package.json
+++ b/front/package.json
@@ -18,9 +18,13 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
+    "react-select": "^2.3.0",
+    "react-select2": "^4.0.3",
+    "react-select2-wrapper": "^1.0.4-beta6",
     "react-speech": "^0.3.2",
     "react-toastify": "^4.5.2",
-    "react-voice-components": "^1.0.0"
+    "react-voice-components": "^1.0.0",
+    "select2": "^4.0.6-rc.1"
   },
   "plugins": [
     [
