--- a/front/package.json
+++ b/front/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "annyang": "^2.6.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
     "dotenv": "^6.2.0",
