--- a/front/package.json
+++ b/front/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "annyang": "^2.6.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
@@ -16,6 +19,7 @@
     "react-axios": "^2.0.3",
     "react-dom": "^16.2.0",
     "react-particles-js": "^2.4.2",
+    "react-responsive-modal": "^3.5.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
