fix and dockerfile

--- a/back/environments/local.env
+++ b/back/environments/local.env
@@ -8,7 +8,7 @@ SMTP_USER=''
 SMTP_PASSWORD=''
 
 # Flask database configuration
-SQLALCHEMY_DATABASE_URI='postgresql://global:123abc@localhost:5432/ai_teacher'
+SQLALCHEMY_DATABASE_URI='postgresql://ai_teacher:09f99bea4746fbb891687d39d546b10d@ai-teacher.cojg2wteejud.sa-east-1.rds.amazonaws.com:5432/ai_teacher'
 SQLALCHEMY_TRACK_MODIFICATIONS=False
 
 # JWT configuration base
