--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "annyang": "^2.6.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
+    "docker": "^1.0.0",
     "dotenv": "^6.2.0",
     "jquery": "^3.3.1",
     "material-ui": "^0.20.0",
