--- a/back/environments/test.env
+++ b/back/environments/test.env
@@ -8,7 +8,7 @@ SMTP_USER=''
 SMTP_PASSWORD=''
 
 # Flask database configuration
-SQLALCHEMY_DATABASE_URI='postgresql://ai_teacher_test:d9d36becad675d9e4d7788c8ad6a2ca8@ai-teacher-test.cojg2wteejud.sa-east-1.rds.amazonaws.com:5432/ai_teacher_test'
+SQLALCHEMY_DATABASE_URI='postgresql://global:1234@localhost:5432/ai_teacher_test'
 SQLALCHEMY_TRACK_MODIFICATIONS=False
 TESTING=True
 
